# cranet

./: .gitignore  404.html  LICENSE  README.md  index.html  package.json  pyproject.toml  setup.cfg
.github/workflows/: docs.yml
assets/: 404.7c1f2f17.js  Layout.46a56dbc.js  app.46385dd9.js  index.html.b2fe576b.js  index.html.b8dc12d4.js  style.836c7c6f.css
docs/: README.md
docs/.vuepress/: config.ts
examples/curve_fit/: main.ipynb  model.py  utils.py
examples/mnist/: .gitignore  mnist.ipynb  mnist_conv.ipynb  mnist_generate.py
examples/pca/: oja_pca.ipynb
examples/perceptron/: perceptron.ipynb
examples/svhn/: .gitignore  svhn.ipynb  svhn.py
scripts/: build.sh  build_local_install.sh  local_install.sh  upload.sh
src/cranet/: __init__.py  util.py
src/cranet/autograd/: __init__.py  function.py  grad_mode.py  tensor.py
src/cranet/data/: __init__.py  collate.py  dataset.py  fetch.py  sampler.py
src/cranet/metrics/: __init__.py  classification.py  common.py  image.py
src/cranet/nn/: functional.py  parameter.py  utils.py
src/cranet/optim/: sgd.py  (+6 more)
src/dpln/: __init__.py  data.py  function.py  layer.py  loss.py  model.py  optimizer.py  util.py
tests/: test.py  test_activation.py  test_auto_encoder.py  test_loss.py  test_mnist.py  test_nn.py  test_tensor.py  utils.py
tests/test_autograd/: test_function.py  test_grad_mode.py  test_tensor.py
tests/test_data/: test_dataset.py  test_loader.py  test_sampler.py
tests/test_nn/: test.py  test_activation.py  test_batchnorm.py  test_conv.py  test_f.py  test_loss.py
tests/test_vision/: test_dataset.py
(+49 files in other folders)
