[metadata]
name = dpln
version = 0.0.3
author = shizuku
author_email = 2112165916@qq.com
description = A tiny library for deep learning using numpy.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shizuku/dpln
project_urls =
    Bug Tracker = https://github.com/shizuku/dpln/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
